<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:id="@+id/item"
    android:baselineAligned="false">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/item">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/number"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/color_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/kod"
            android:visibility="invisible"
            android:layout_gravity="left|top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/status"
            android:visibility="visible"
            android:textColor="@color/color_white"
            android:layout_gravity="bottom" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/_id"
            android:visibility="visible"
            android:textColor="@color/color_white" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/item">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/client"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/color_white" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/item">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/name"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/color_white" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/status1"
        android:background="@drawable/select_status1"
        android:onClick="onStatusClick">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_status_1"
            android:id="@+id/text1"
            android:layout_gravity="center"
            android:gravity="center" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/status2"
        android:background="@drawable/select_status2"
        android:onClick="onStatusClick">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_status_2"
            android:id="@+id/text2"
            android:layout_gravity="center"
            android:gravity="center" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/status3"
        android:background="@drawable/select_status3"
        android:onClick="onStatusClick">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_status_3"
            android:id="@+id/text3"
            android:layout_gravity="center"
            android:gravity="center" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/status4"
        android:background="@drawable/select_status4"
        android:onClick="onStatusClick">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_status_4"
            android:id="@+id/text4"
            android:layout_gravity="center"
            android:gravity="center" />
    </FrameLayout>

</LinearLayout>